arreglos al nav

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section>
             <h1 class="titulo-h1 animate_animated animate__bounceIn">
-                Inmobiliaria Martinez... Mucho mas que una mudanza
+                Inmobiliaria Martinez... Mucho más que una mudanza
             </h1>
             <div class="parrafo-flex">
                 <p class="parrafo-index">
@@ -64,7 +64,7 @@
                     <img src="./Images/imgindex/alquilar.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Comprar</h5>
-                        <p class="card-text">Aca podes encontrar todo lo referido a la compra de propiedades</p>
+                        <p class="card-text">Acá podes encontrar todo lo referido a la compra de propiedades</p>
                         <a href="./Pages/comprar.html" class="btn btn-primary">Ver Mas...</a>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     <img src="./Images/imgindex/comprar.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Vender</h5>
-                        <p class="card-text">Aca podes encontrar el formulario de venta</p>
+                        <p class="card-text">Acá podes encontrar el formulario de venta</p>
                         <a href="./Pages/vender.html" class="btn btn-primary">Ver Mas...</a>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                     <img src="./Images/imgindex/ventas.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Alquilar</h5>
-                        <p class="card-text">Aca encontraras todo lo referido al alquiler de propiedades</p>
+                        <p class="card-text">Acá encontraras todo lo referido al alquiler de propiedades</p>
                         <a href="./Pages/alquileres.html" class="btn btn-primary">Ver Mas...</a>
                     </div>
                 </div>
