--- a/Pages/vender.html
+++ b/Pages/vender.html
@@ -40,7 +40,7 @@
         <h2 class="titulo-h1 animate_animated animate__bounceIn">
             Publica tu propiedad
         </h2>
-        <form class="row g-3 p-3 ">
+        <form class="row g-3 p-3 w-100 ">
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Nombre</label>
                 <input type="email" class="form-control" placeholder="ingrese su nombre" id="inputEmail4">
