--- a/index.html
+++ b/index.html
@@ -150,19 +150,11 @@
                     Secciones
                 </h2>
                 <a href="#">Inicio</a>
-                <a href="#">Comprar</a>
-                <a href="#">Alquilar</a>
-                <a href="#">Vender</a>
-                <a href="#">Contacto</a>
-            </div>
-            <div class="box-footer">
-                <h2>
-                    Compañia
-                </h2>
-                <a href="#">acerca de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Procesos</a>
-                <a href="#">Servicios</a>
+                <a href="./Pages/comprar.html">Comprar</a>
+                <a href="./Pages/alquileres.html">Alquilar</a>
+                <a href="./Pages/vender.html">Vender</a>
+                <a href="./Pages/contacto.html">Contacto</a>
+                <a href="./Pages/conocenos.html">Conocenos</a>
             </div>
             <div class="box-footer">
                 <h2>
