--- a/Pages/conocenos.html
+++ b/Pages/conocenos.html
@@ -96,41 +96,38 @@
                     <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
                 </div>
                 <div class="terminos">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae odit voluptatum
-                        dignissimos ea corporis ducimus eos atque totam repudiandae.</p>
+                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
+                        independiente. En cumplimiento de las leyes vigentes que regulan el corretaje inmobiliario, Ley
+                        Nacional 25.028, Ley 22.802 de Lealtad Comercial, Ley 24.240 de Defensa al Consumidor, las
+                        normas del Código Civil y Comercial de la Nación y Constitucionales, los agentes/gestores NO
+                        ejercen el corretaje inmobiliario. Todas las operaciones inmobiliarias son objeto de
+                        intermediación y conclusión por parte de los corredores públicos inmobiliarios colegiados, cuyos
+                        datos se exhiben en cada publicación de propiedad objeto de comercialización.</p>
                 </div>
             </div>
             <div class="box-footer">
                 <h2>
                     Secciones
                 </h2>
-                <a href="#">Inicio</a>
-                <a href="#">Comprar</a>
-                <a href="#">Alquilar</a>
-                <a href="#">Vender</a>
-                <a href="#">Contacto</a>
-            </div>
-            <div class="box-footer">
-                <h2>
-                    Compañia
-                </h2>
-                <a href="#">acerca de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Procesos</a>
-                <a href="#">Servicios</a>
+                <a href="../index.html">Inicio</a>
+                <a href="../Pages/comprar.html">Comprar</a>
+                <a href="../Pages/alquileres.html">Alquilar</a>
+                <a href="../Pages/vender.html">Vender</a>
+                <a href="../Pages/contacto.html">Contacto</a>
+                <a href="#">Conocenos</a>
             </div>
             <div class="box-footer">
                 <h2>
                     Redes Sociales
                 </h2>
                 <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i>Facebook</a>
-                <a href="https://www.twitter.com"target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
-                <a href="https://www.linkedin.com"target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a>
-                <a href="https://www.instagram.com"target="_blank"><i class="fab fa-instagram-square"></i>Instagram</a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
+                <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i>Instagram</a>
             </div>
             <div class="box-copyright">
                 <hr>
-                <p>Todos los derechos reservados © 2022 <b>Julián Schreiber</b></p>
+                <p>Todos los derechos reservados © 2021 <b>Julián Schreiber</b></p>
             </div>
         </div>
     </footer>
