--- a/Pages/propiedad.html
+++ b/Pages/propiedad.html
@@ -141,65 +141,44 @@
 
     </main>
     <footer>
-        <!-- footer -->
-        <div class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-xs-12 ">
-                        <div class="first">
-                            <h4>Secciones</h4>
-                            <p><a class="text-decoration-none text-white" href="../index.html">Inicio</a></p>
-                            <p><a class="text-decoration-none text-white" href="./conocenos.html">Conocenos</a></p>
-                            <p><a class="text-decoration-none text-white" href="./comprar.html">Comprar</a></p>
-                            <p><a class="text-decoration-none text-white" href="./alquileres.html">Alquilar</a></p>
-                            <p><a class="text-decoration-none text-white" href="#">Vender</a></p>
-                            <p><a class="text-decoration-none text-white" href="./contacto.html">Contacto</a></p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 col-xs-12">
-                        <div class="second">
-                            <h4> Buscanos</h4>
-                            <p>Buenos aires 1655</p>
-                            <p>Zona congreso</p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 col-xs-12">
-                        <div class="third">
-                            <h4> Contacto</h4>
-                            <ul>
-                                <li>Marcela Martinez </li>
-                                <li></li>
-
-
-                                <li><i class="far fa-envelope"></i> Inmobiliariamartinez@gmail.com</li>
-                                <li><i class="far fa-envelope"></i> inmobiliariamartinez@yahoo.com</li>
-
-
-                                <li><i class="fas fa-map-marker-alt"></i> Buenos aires, Argentina </li>
-                            </ul>
-                        </div>
-                    </div>
+        <div class="container-footer">
+            <div class="box-footer">
+                <div class="logo">
+                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
+                </div>
+                <div class="terminos">
+                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
+                        independiente. En cumplimiento de las leyes vigentes que regulan el corretaje inmobiliario, Ley
+                        Nacional 25.028, Ley 22.802 de Lealtad Comercial, Ley 24.240 de Defensa al Consumidor, las
+                        normas del Código Civil y Comercial de la Nación y Constitucionales, los agentes/gestores NO
+                        ejercen el corretaje inmobiliario. Todas las operaciones inmobiliarias son objeto de
+                        intermediación y conclusión por parte de los corredores públicos inmobiliarios colegiados, cuyos
+                        datos se exhiben en cada publicación de propiedad objeto de comercialización.</p>
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="line"></div>
-                        <div class="second2">
-                            <a href="https://www.whatsapp.com/" target="_blank"> <i
-                                    class="fab fa-whatsapp fa-3x margin"></i></a>
-                            <a href="https://www.facebook.com/" target="_blank"> <i
-                                    class="fab fa-facebook fa-3x margin"></i></a>
-                            <a href="https://www.twitter.com/" target="_blank"> <i
-                                    class="fab fa-twitter fa-3x margin"></i></a>
-                            <a href="https://www.instagram.com/" target="_blank"> <i
-                                    class="fab fa-instagram fa-3x margin"></i></a>
-                        </div>
-
-                    </div>
-                </div>
+            <div class="box-footer">
+                <h2>
+                    Secciones
+                </h2>
+                <a href="../index.html">Inicio</a>
+                <a href="../Pages/comprar.html">Comprar</a>
+                <a href="../Pages/alquileres.html">Alquilar</a>
+                <a href="../Pages/vender.html">Vender</a>
+                <a href="../Pages/contacto.html">Contacto</a>
+                <a href="../Pages/conocenos.html">Conocenos</a>
+            </div>
+            <div class="box-footer">
+                <h2>
+                    Redes Sociales
+                </h2>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i>Facebook</a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
+                <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i>Instagram</a>
+            </div>
+            <div class="box-copyright">
+                <hr>
+                <p>Todos los derechos reservados © 2021 <b>Julián Schreiber</b></p>
             </div>
         </div>
     </footer>
