--- a/Pages/conocenos.html
+++ b/Pages/conocenos.html
@@ -80,9 +80,9 @@
                     permitiremos que se repita la historia.
                 </p>
                 <div class="cuadrado3">
-                    <h4>
-                        COMPRADORES CONTENTOS
-                    </h4>
+                    <h2>
+                        Compradores contentos 
+                    </h2>
                     <img src="../Images/sonrisa.jpg">
                 </div>
             </div>
