--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="contactanos ante cualquier duda para vender, comprar o alquilar en inmobiliaria Martinez">
-    <meta name="keywords"  content="alquilar, ph, edificio, campo, casa, departamento, cochera, local, oficina, hotel, contacto">
+    <meta name="description"
+        content="contactanos ante cualquier duda para vender, comprar o alquilar en inmobiliaria Martinez">
+    <meta name="keywords"
+        content="alquilar, ph, edificio, campo, casa, departamento, cochera, local, oficina, hotel, contacto">
     <title>Inmobiliaria Martinez🏠/ Contacto</title>
     <link rel="shortcut icon" href="../Media/favicon.ico">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -29,25 +31,25 @@
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt=""></label>
         <nav class="menu">
-                        <ul>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="conocenos.html">Conocenos</a></li>
-                            <li><a href="comprar.html">Comprar</a></li>
-                            <li><a href="alquileres.html">Alquilar</a></li>
-                            <li><a href="vender.html">Vender</a></li>
-                            <li><a href="#">Contacto</a></li>
-                        </ul>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="conocenos.html">Conocenos</a></li>
+                <li><a href="comprar.html">Comprar</a></li>
+                <li><a href="alquileres.html">Alquilar</a></li>
+                <li><a href="vender.html">Vender</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <section>
             <div>
-                <div>
-                    <h1 class="titulo-h1 animate_animated animate__bounceIn">
-                        Contacto
-                    </h1>
-                </div>
-                <div>
+                <h1 class="titulo-h1 animate_animated animate__bounceIn">
+                    Contacto
+                </h1>
+            </div>
+            <div>
+                <form>
                     <div class="container">
                         <div class="contact-parent">
                             <div class="contact-child child1">
@@ -61,7 +63,7 @@
 
                                 <p>
                                     <i class="fas fa-phone-alt"></i> Llamanos <br />
-                                    <span> 0787878787</span>
+                                    <span> 0800-333-444</span>
                                 </p>
 
                                 <p>
@@ -97,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </form>
         </section>
     </main>
     <footer>
@@ -107,7 +109,8 @@
                     <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
                 </div>
                 <div class="terminos">
-                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
+                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
+                        gestión
                         independiente. En cumplimiento de las leyes vigentes que regulan el corretaje inmobiliario, Ley
                         Nacional 25.028, Ley 22.802 de Lealtad Comercial, Ley 24.240 de Defensa al Consumidor, las
                         normas del Código Civil y Comercial de la Nación y Constitucionales, los agentes/gestores NO
