--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="keywords" content="alquilar, vender, inmobiliaria, ph, edificio, comprar, tasaciones, campo, casa">
     <title>inmobiliaria martinez🏠</title>
     <!-- icons -->
-    <link rel="shortcut icon" href="../Trabajo practico nro 1/Media/favicon.ico">
-    <link rel="shortcut icon" href="../Media/favicon.ico">
+    <link rel="shortcut icon" href="./Images/icon/favicon.ico">
+    <link rel="shortcut icon" href="./Images/icon/favicon.ico">
     <!-- link css -->
     <link rel="stylesheet" href="./css/estilos.css">
     <!-- fonts -->
