--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -60,6 +60,7 @@
                 </h1>
             </div>
             <div>
+                <!-- formulario de venta -->
                 <form>
                     <div class="container">
                         <div class="contact-parent">
