--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- section home -->
         <section>
             <h1 class="titulo-h1 animate_animated animate__bounceIn">
-                Inmobiliaria Martinez... Mucho más que una mudanza
+                Inmobiliaria Martinez-Prieto... Mucho más que una mudanza
             </h1>
             <div class="parrafo-flex">
                 <p class="parrafo-index">
@@ -67,6 +67,7 @@
                     de este sitio.
                 </p>
             </div>
+            <!-- cartas -->
             <div class="cartas">
                 <div class="card">
                     <img src="./Images/imgindex/alquilar.jpg" class="card-img-top" alt="...">
