--- a/Pages/propiedad.html
+++ b/Pages/propiedad.html
@@ -57,10 +57,10 @@
         <h1 class="titulo-h1 animate_animated animate__bounceIn">
             Se vende o alquila casa en Monte Hermoso
         </h1>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide tamaño-carousel" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../Images/monte hermoso/monte1.webp" class="d-block w-100 h-25" alt="...">
+                    <img src="../Images/monte hermoso/monte1.webp" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="../Images/monte hermoso/monte2.webp" class="d-block w-100" alt="...">
@@ -145,8 +145,8 @@
                         <label for="exampleFormControlTextarea1">Mensaje</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                    <div class="col-12 d-flex">
-                        <button class="btn btn-primary " type="submit">Enviar</button>
+                    <div class="col-12 d-flex justify-content-center">
+                        <button class="btn btn-primary  " type="submit">Enviar</button>
                     </div>
                 </form>
             </div>
