--- a/Pages/alquileres.html
+++ b/Pages/alquileres.html
@@ -39,7 +39,7 @@
     <!-- barra de navegacion -->
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt=""></label>
+        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt="Menú hamburguesa"></label>
         <nav class="menu">
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
@@ -60,51 +60,51 @@
                 </h1>
                 <div class="galeria-alquileres">
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/1.jpg" alt="" class="gallery-img">
+                        <img src="../Images/imgalquilar/1.jpg" alt="casas" class="gallery-img">
                         <h2 class="gallery-title">valor 5.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/2.jpg" alt="" class="gallery-img">
+                        <img src="../Images/imgalquilar/2.jpg" alt="casas" class="gallery-img">
                         <h2 class="gallery-title">valor 1.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgindex/3.jpg" alt="" class="gallery-img">
+                        <img src="../Images/imgindex/3.jpg" alt="casas" class="gallery-img">
                         <h2 class="gallery-title">valor 2.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/4.jpg" alt="" class="gallery-img">
+                        <img src="../Images/imgalquilar/4.jpg" alt="casas" class="gallery-img">
                         <h2 class="gallery-title">valor 3.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/5.jpg" alt="" class="gallery-img">
+                        <img src="../Images/imgalquilar/5.jpg" alt="casas" class="gallery-img">
                         <h2 class="gallery-title">valor 500 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/6.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="../Images/imgalquilar/6.jpg" alt="casas" class="gallery-img estirar-img">
                         <h2 class="gallery-title">valor 10.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/7.jpg" alt="" class="gallery-img">
+                        <img src="../Images/imgalquilar/7.jpg" alt="casas" class="gallery-img">
                         <h2 class="gallery-title">valor 5.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/8.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="../Images/imgalquilar/8.jpg" alt="casas" class="gallery-img estirar-img">
                         <h2 class="gallery-title">valor 1.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/9.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="../Images/imgalquilar/9.jpg" alt="casas" class="gallery-img estirar-img">
                         <h2 class="gallery-title">valor 2.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/1.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="../Images/imgalquilar/1.jpg" alt="casas" class="gallery-img estirar-img">
                         <h2 class="gallery-title">valor 7.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/11.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="../Images/imgalquilar/11.jpg" alt="casas" class="gallery-img estirar-img">
                         <h2 class="gallery-title">valor 2.000 USD</h2>
                     </div>
                     <div class="gallery-item">
-                        <img src="../Images/imgalquilar/12.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="../Images/imgalquilar/12.jpg" alt="casas" class="gallery-img estirar-img">
                         <h2 class="gallery-title">valor 1.000 USD</h2>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
         <div class="container-footer">
             <div class="box-footer">
                 <div class="logo">
-                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
+                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="Logo">
                 </div>
                 <div class="terminos">
                     <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
