--- a/Pages/comprar.html
+++ b/Pages/comprar.html
@@ -39,7 +39,7 @@
     <!-- barra de navegación -->
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt=""></label>
+        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt="menú hamburguesa"></label>
         <nav class="menu">
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
@@ -59,35 +59,35 @@
         </h1>
         <div class="galeria-compras">
             <div class="gallery-item">
-                <a href="../Pages/propiedad.html"><img src="../Images/imgindex/1.jpg"></a> class="gallery-img">
+                <a href="../Pages/propiedad.html"><img src="../Images/imgindex/1.jpg" alt="casas"></a> class="gallery-img">
                 <h2 class="gallery-title">valor 50.000 USD</h2>
             </div>
             <div class="gallery-item">
-                <img src="../Images/imgindex/2.jpg" alt="" class="gallery-img">
+                <img src="../Images/imgindex/2.jpg" alt="casas" class="gallery-img">
                 <h2 class="gallery-title">valor 50.000 USD</h2>
             </div>
             <div class="gallery-item">
-                <img src="../Images/imgindex/3.jpg" alt="" class="gallery-img">
+                <img src="../Images/imgindex/3.jpg" alt="casas" class="gallery-img">
                 <h2 class="gallery-title">valor 20.000 USD</h2>
             </div>
             <div class="gallery-item">
-                <img src="../Images/imgindex/4.jpg" alt="" class="gallery-img">
+                <img src="../Images/imgindex/4.jpg" alt="casas" class="gallery-img">
                 <h2 class="gallery-title">valor 32.000 USD</h2>
             </div>
             <div class="gallery-item">
-                <img src="../Images/imgindex/5.jpg" alt="" class="gallery-img">
+                <img src="../Images/imgindex/5.jpg" alt="casas" class="gallery-img">
                 <h2 class="gallery-title">valor 35.000 USD</h2>
             </div>
             <div class="gallery-item">
-                <img src="../Images/imgindex/6.jpg" alt="" class="gallery-img estirar-img">
+                <img src="../Images/imgindex/6.jpg" alt="casas" class="gallery-img estirar-img">
                 <h2 class="gallery-title">valor 120.000 USD</h2>
             </div>
             <div class="gallery-item">
-                <img src="../Images/imgindex/7.jpg" alt="" class="gallery-img">
+                <img src="../Images/imgindex/7.jpg" alt="casas" class="gallery-img">
                 <h2 class="gallery-title">valor 75.000 USD</h2>
             </div>
             <div class="gallery-item">
-                <img src="../Images/imgindex/8.jpg" alt="" class="gallery-img estirar-img">
+                <img src="../Images/imgindex/8.jpg" alt="casas" class="gallery-img estirar-img">
                 <h2 class="gallery-title">valor 100.000 USD</h2>
             </div>
         </div>
@@ -98,7 +98,7 @@
         <div class="container-footer">
             <div class="box-footer">
                 <div class="logo">
-                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
+                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="Logo">
                 </div>
                 <div class="terminos">
                     <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
