--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -39,7 +39,7 @@
     <!-- barra de navegación -->
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt=""></label>
+        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt="menú hamburguesa"></label>
         <nav class="menu">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -119,7 +119,7 @@
         <div class="container-footer">
             <div class="box-footer">
                 <div class="logo">
-                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
+                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="Logo">
                 </div>
                 <div class="terminos">
                     <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
