--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- barra de navegacion -->
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="./Images/imgindex/menu2.png" alt=""></label>
+        <label for="btn-menu"><img src="./Images/imgindex/menu2.png" alt="menú hamburguesa"></label>
         <nav class="menu">
             <ul>
                 <li><a href="#">Inicio</a></li>
@@ -70,7 +70,7 @@
             <!-- cartas -->
             <div class="cartas">
                 <div class="card">
-                    <img src="./Images/imgindex/alquilar.jpg" class="card-img-top" alt="...">
+                    <img src="./Images/imgindex/alquilar.jpg" class="card-img-top" alt="imagen alquilar">
                     <div class="card-body">
                         <h5 class="card-title">Comprar</h5>
                         <p class="card-text">Acá podes encontrar todo lo referido a la compra de propiedades</p>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./Images/imgindex/comprar.jpg" class="card-img-top" alt="...">
+                    <img src="./Images/imgindex/comprar.jpg" class="card-img-top" alt="imagen comprar">
                     <div class="card-body">
                         <h5 class="card-title">Vender</h5>
                         <p class="card-text">Acá podes encontrar el formulario de venta</p>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./Images/imgindex/ventas.jpg" class="card-img-top" alt="...">
+                    <img src="./Images/imgindex/ventas.jpg" class="card-img-top" alt="imagen ventas">
                     <div class="card-body">
                         <h5 class="card-title">Alquilar</h5>
                         <p class="card-text">Acá encontraras todo lo referido al alquiler de propiedades</p>
@@ -103,35 +103,35 @@
                 </h2>
                 <div class="gallery-container">
                     <div class="gallery-item">
-                        <img src="Images/imgindex/1.jpg" alt="" class="gallery-img">
+                        <img src="Images/imgindex/1.jpg" alt="casas" class="gallery-img">
                         <h2 class="gallery-title">valor 50.000 USD</h3>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/imgindex/2.jpg" alt="" class="gallery-img">
+                        <img src="Images/imgindex/2.jpg" alt="casas" class="gallery-img">
                         <h3 class="gallery-title">valor 50.000 USD</h3>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/imgindex/3.jpg" alt="" class="gallery-img">
+                        <img src="Images/imgindex/3.jpg" alt="casas" class="gallery-img">
                         <h3 class="gallery-title">valor 20.000 USD</h3>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/imgindex/4.jpg" alt="" class="gallery-img">
+                        <img src="Images/imgindex/4.jpg" alt="casas" class="gallery-img">
                         <h3 class="gallery-title">valor 32.000 USD</h3>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/imgindex/5.jpg" alt="" class="gallery-img">
+                        <img src="Images/imgindex/5.jpg" alt="casas" class="gallery-img">
                         <h3 class="gallery-title">valor 35.000 USD</h3>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/imgindex/6.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="Images/imgindex/6.jpg" alt="casas" class="gallery-img estirar-img">
                         <h3 class="gallery-title">valor 120.000 USD</h3>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/imgindex/7.jpg" alt="" class="gallery-img">
+                        <img src="Images/imgindex/7.jpg" alt="casas" class="gallery-img">
                         <h3 class="gallery-title">valor 75.000 USD</h3>
                     </div>
                     <div class="gallery-item">
-                        <img src="Images/imgindex/8.jpg" alt="" class="gallery-img estirar-img">
+                        <img src="Images/imgindex/8.jpg" alt="casas" class="gallery-img estirar-img">
                         <h3 class="gallery-title">valor 100.000 USD</h3>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
         <div class="container-footer">
             <div class="box-footer">
                 <div class="logo">
-                    <img src="./Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
+                    <img src="./Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="Logo">
                 </div>
                 <div class="terminos">
                     <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
