--- a/Pages/propiedad.html
+++ b/Pages/propiedad.html
@@ -39,7 +39,7 @@
     <!-- barra de navegación -->
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt=""></label>
+        <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt="menú hamburguesa"></label>
         <nav class="menu">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -60,19 +60,19 @@
         <div id="carouselExampleControls" class="carousel slide tamaño-carousel" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../Images/monte hermoso/monte1.webp" class="d-block w-100" alt="...">
+                    <img src="../Images/monte hermoso/monte1.webp" class="d-block w-100" alt="imagen carousel-casas">
                 </div>
                 <div class="carousel-item">
-                    <img src="../Images/monte hermoso/monte2.webp" class="d-block w-100" alt="...">
+                    <img src="../Images/monte hermoso/monte2.webp" class="d-block w-100" alt="imagen carousel-casas">
                 </div>
                 <div class="carousel-item">
-                    <img src="../Images/monte hermoso/monte3.webp" class="d-block w-100" alt="...">
+                    <img src="../Images/monte hermoso/monte3.webp" class="d-block w-100" alt="imagen carousel-casas">
                 </div>
                 <div class="carousel-item">
-                    <img src="../Images/monte hermoso/monte4.webp" class="d-block w-100" alt="...">
+                    <img src="../Images/monte hermoso/monte4.webp" class="d-block w-100" alt="imagen carousel-casas">
                 </div>
                 <div class="carousel-item">
-                    <img src="../Images/monte hermoso/monte5.webp" class="d-block w-100" alt="...">
+                    <img src="../Images/monte hermoso/monte5.webp" class="d-block w-100" alt="imagen carousel-casas">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -158,7 +158,7 @@
         <div class="container-footer">
             <div class="box-footer">
                 <div class="logo">
-                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="">
+                    <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="Logo">
                 </div>
                 <div class="terminos">
                     <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
