--- a/Pages/propiedad.html
+++ b/Pages/propiedad.html
@@ -146,7 +146,7 @@
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                     <div class="col-12 d-flex justify-content-center">
-                        <button class="btn btn-primary  " type="submit">Enviar</button>
+                        <button class="btn btn-primary mt-3 " type="submit">Enviar</button>
                     </div>
                 </form>
             </div>
