--- a/Pages/vender.html
+++ b/Pages/vender.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <!-- section-formulario -->
-        <section>
+        <section class="background">
             <h2 class="titulo-h1 animate_animated animate__bounceIn">
                 Publica tu propiedad
             </h2>
