--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </section>
         <!-- section ofertas -->
-        <section>
+        <section class="background">
             <div>
                 <h2 class=titulo-h2 animate_animated animate__bounceIn>
                     Conoce nuestras mejores ofertas
