--- a/Pages/alquileres.html
+++ b/Pages/alquileres.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <!-- seccion galeria-grid -->
-        <section class="alquileres1">
+        <section class="alquileres1 background">
             <div>
                 <h1 class="titulo-h1 animate_animated animate__bounceIn">
                     Alquileres
