--- a/Pages/comprar.html
+++ b/Pages/comprar.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <!-- Galeria compras-grid -->
-        <section>
+        <section class="background">
         <h1 class="titulo-h1 animate_animated animate__bounceIn">
             Comprar
         </h1>
