--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <!-- section contacto -->
-        <section>
+        <section class="background">
             <div>
                 <h1 class="titulo-h1 animate_animated animate__bounceIn">
                     Contacto
